--- a/paskaitos/2022-04-25/duomenu_perdavimas/package.json
+++ b/paskaitos/2022-04-25/duomenu_perdavimas/package.json
@@ -9,5 +9,11 @@
   "type": "module",
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "chalk": "^5.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
+  }
 }
