--- a/paskaitos/Freelanceriu direktorija/server/package.json
+++ b/paskaitos/Freelanceriu direktorija/server/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.1",
     "joi": "^17.6.0",
     "load-json-file": "^7.0.1",
+    "multer": "^1.4.4",
     "mysql2": "^2.3.3",
     "sequelize": "^6.19.1"
   },
